--- a/pages/exo-flex.html
+++ b/pages/exo-flex.html
@@ -4,63 +4,56 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Benjamin Keiff DEV-2 TP</title>
     <link rel="stylesheet" href="../css/style.css">
+    <title>tp3</title>
 </head>
 <body>
-    <header>
-        <h1> HEADER </h1>
-        <h2> NAV </h2>
-        <div class="navbar">
-            <div class="box">
-                <a href="#"> Link 1 </a>
-            </div>
-            <div class="box">
-                <a href="#"> Link 2 </a>
-            </div>
-            <div class="box">
-                <a href="#"> Link 3 </a>
-            </div>
-            <div class="box">
-                <a href="#"> Link 4 </a>
-            </div>
-            <div class="box">
-                <a href="#"> Link 5 </a>
-            </div>
-        </div>
+    <header class="head">
+        <h1>HEADER</h1>
+        <h3>NAV</h3>
     </header>
-    <main class="body">
-        <aside id="left">
-            <h3>
-                Aside 1
-            </h3>
+    <nav>
+        <ul>
+            <li><a href="#">Link 1</a></li>
+            <li><a href="#">Link 2</a></li>
+            <li><a href="#">Link 3</a></li>
+            <li><a href="#">Link 4</a></li>
+            <li><a href="#">Link 5</a></li>
+        </ul>
+    </nav>
+
+    <main>
+        <aside id="aside1">
+            <p>
+                ASIDE 1
+            </p>
         </aside>
-        <article>
-            <div id="div1">
+        <section>
+            <article>
                 <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed ipsa omnis, excepturi est veritatis ea. A, ipsa! Minima adipisci omnis quod esse a, doloremque enim! Exercitationem, at! Nulla minus eligendi porro est repellat tempore possimus? Excepturi dolorem, minima incidunt id illo eius architecto beatae rem natus distinctio minus nostrum, quasi porro quos voluptatem mollitia autem impedit culpa. Nemo, eos fuga?
+                 Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eius molestias, voluptatem sequi, exercitationem ad sed similique consequatur lorem veniam nobis ex voluptates porro animi. Error modi saepe iusto, laboriosam distinctio molestias. -->
                 </p>
-            </div>
-            <div id="div2">
+            </article>
+            <article>
                 <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed ipsa omnis, excepturi est veritatis ea. A, ipsa! Minima adipisci omnis quod esse a, doloremque enim! Exercitationem, at! Nulla minus eligendi porro est repellat tempore possimus? Excepturi dolorem, minima incidunt id illo eius architecto beatae rem natus distinctio minus nostrum, quasi porro quos voluptatem mollitia autem impedit culpa. Nemo, eos fuga?
+                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Tenetur et, odio aliquam possimus tempore aperiam aspernatur perferendis repellat optio totam voluptatem, quo ab velit similique a veniam quaerat, iure consequatur! Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor eos consequatur excepturi provident consectetur voluptas iusto recusandae vero veritatis, saepe corporis minus, nemo aspernatur laborum pariatur labore. Molestias, eligendi dolore!
                 </p>
-            </div>
-            <div id="div3">
+            </article>
+            <article>
                 <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed ipsa omnis, excepturi est veritatis ea. A, ipsa! Minima adipisci omnis quod esse a, doloremque enim! Exercitationem, at! Nulla minus eligendi porro est repellat tempore possimus? Excepturi dolorem, minima incidunt id illo eius architecto beatae rem natus distinctio minus nostrum, quasi porro quos voluptatem mollitia autem impedit culpa. Nemo, eos fuga?
-                </p>
-            </div>
-        </article>
-        <aside id="right">
-                <h3>
-                    Aside 2
-                </h3>
+                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ea eos, atque quis pariatur itaque consequuntur, sit illo ratione perspiciatis excepturi incidunt, esse odio placeat minus ab eaque nisi quae? Minima? Lorem ipsum, dolor sit amet consectetur adipisicing elit. Libero officiis architecto quis esse eaque corporis, deleniti rerum, maiores, labore nemo sapiente! Sequi optio, officia tempore quae perferendis labore tenetur explicabo. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eos laudantium nemo vitae sed, ipsa perspiciatis debitis dignissimos error fugiat aliquam at aspernatur, sit magnam veritatis voluptatum ad, ullam accusantium unde.
+                </p>            
+            </article>
+        </section>
+        <aside id="aside2">
+            <p>
+                ASIDE 2
+            </p>
         </aside>
     </main>
-    <footer>
-        <h2> FOOTER </h2>
-    </footer>
 
+    <footer>
+        <h2>FOOTER</h2>
+    </footer>
 </body>
 </html>
