--- a/pages/exo-flex.html
+++ b/pages/exo-flex.html
@@ -23,7 +23,7 @@
     </nav>
 
     <main>
-        <aside id="aside1">
+        <aside>
             <p>
                 ASIDE 1
             </p>
